--- a/public/pages/css/thanh-tuu-noi-bat.css
+++ b/public/pages/css/thanh-tuu-noi-bat.css
@@ -50,7 +50,7 @@
     font-size: 48px !important;
     font-weight: 700 !important;
     line-height: 1.2 !important;
-    color: #FF0000 !important;
+    color: #0C7A07 !important;
     display: block;
     padding-bottom: 10px;
     border-bottom: 3px solid #333;
