--- a/public/pages/css/other-style.css
+++ b/public/pages/css/other-style.css
@@ -97,3 +97,20 @@ img:is([sizes="auto" i], [sizes^="auto," i]) { contain-intrinsic-size: 3000px 15
 #site-navigation-wrap .dropdown-menu >li >a {
     padding: 0 20px;
 }
+
+.elementor-2330 .elementor-element.elementor-element-1c42acf .elementor-heading-title {
+    color: #212121 !important;
+    font-size: 16px !important;
+    font-weight: 500 !important;
+}
+
+.elementor-2330 .elementor-element.elementor-element-02633e1 .elementor-heading-title {
+    font-size: 28px !important;
+    font-weight: 700 !important;
+}
+
+.elementor-2330 .elementor-element.elementor-element-96caf90 .elementor-heading-title {
+    color: #6A6A75 !important;;
+    font-size: 16px !important;;
+    font-weight: 500 !important;;
+}
